# fred

./: .gitignore  README.md  pyproject.toml  requirements-ml.txt
app/: gui.py  main.py
app/api/: routes.py
app/core/: __init__.py  identities.py
app/db/: __init__.py  database.py  models.py
app/schemas/: __init__.py  job.py
app/workers/: __init__.py  job_worker.py  seedvc_runner.py  xnemo_runner.py
scripts/: download_weights.py  run_api.sh  run_gui.sh  run_worker.sh  start_postgres.sh  verify_setup.py
