[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fred"
version = "0.1.0"
description = "Video Processing Pipeline - Facial Reenactment + Voice Conversion"
requires-python = ">=3.10"
dependencies = [
    # FastAPI backend
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    # Gradio GUI
    "gradio>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tools*", "identities*", "shared_data*", "containers*", "scripts*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

# ML dependencies for X-Nemo and Seed-VC (install separately in ML environment)
ml = [
    # PyTorch (install via conda/pip with CUDA support first)
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.0.0",
    
    # X-Nemo dependencies
    "accelerate>=0.27.0",
    "decord>=0.6.0",
    "diffusers>=0.27.0",
    "einops>=0.8.0",
    "mediapipe>=0.10.11",
    "omegaconf>=2.3.0",
    "opencv-contrib-python>=4.9.0",
    "opencv-python>=4.10.0",
    "Pillow>=11.0.0",
    "safetensors>=0.5.0",
    "scipy>=1.13.0",
    "scikit-image>=0.22.0",
    "transformers>=4.38.0",
    "xformers>=0.0.24",
    "huggingface_hub>=0.21.0",
    
    # Seed-VC dependencies  
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "hydra-core>=1.3.0",
    "pyyaml>=6.0",
    "munch>=4.0.0",
    
    # Common
    "numpy>=1.24.0,<2.0.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
